--- a/tox.ini
+++ b/tox.ini
@@ -70,6 +70,8 @@ setenv =
 deps =
     -r {toxinidir}/docs/requirements.txt
     # ^  requirements.txt shared with Read The Docs
+allowlist_externals =
+    sphinx-build
 commands =
     sphinx-build --color -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
 
